--- a/usr/lib/grac-editor/grac_editor.ui
+++ b/usr/lib/grac-editor/grac_editor.ui
@@ -1,72 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Generated with glade 3.38.2 -->
 <interface>
-  <requires lib="gtk+" version="3.12"/>
-  <object class="GtkAccelGroup" id="accelgroup1"/>
-  <object class="GtkMenu" id="menu">
-    <property name="visible">True</property>
+  <requires lib="gtk+" version="3.24"/>
+  <object class="GtkAccelGroup" id="accelgroup"/>
+  <object class="GtkAdjustment" id="adjustment1">
+    <property name="upper">100</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
+  </object>
+  <object class="GtkPopover" id="popover">
     <property name="can-focus">False</property>
-    <property name="accel-group">accelgroup1</property>
     <child>
-      <object class="GtkMenuItem" id="menu_load">
+      <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="label" translatable="yes">_Reset(R)</property>
-        <property name="use-underline">True</property>
-        <signal name="activate" handler="on_menu_load_activate" swapped="no"/>
-        <accelerator key="r" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="menu_apply">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
-        <property name="label" translatable="yes">_Save(S)</property>
-        <property name="use-underline">True</property>
-        <signal name="activate" handler="on_menu_apply_activate" swapped="no"/>
-        <accelerator key="s" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="menu_remove_user_rule">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
-        <property name="label" translatable="yes">_Remove User Rule(U)</property>
-        <property name="use-underline">True</property>
-        <signal name="activate" handler="on_menu_remove_user_rule_activate" swapped="no"/>
-        <accelerator key="u" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkSeparatorMenuItem" id="menuitem5">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="menu_help">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
-        <property name="label" translatable="yes">_Help(F1)</property>
-        <property name="use-underline">True</property>
-        <signal name="activate" handler="on_menu_help_activate" swapped="no"/>
-        <accelerator key="F1" signal="activate"/>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="menu_quit">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
-        <property name="label" translatable="yes">_Quit(Q)</property>
-        <property name="use-underline">True</property>
-        <signal name="activate" handler="on_menu_quit_activate" swapped="no"/>
-        <accelerator key="q" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+        <property name="orientation">vertical</property>
+        <property name="spacing">5</property>
+        <child>
+          <object class="GtkModelButton" id="menu_load">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="text" translatable="yes">_Reset</property>
+            <signal name="clicked" handler="on_menu_load_activate" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkModelButton" id="menu_apply">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="text" translatable="yes">_Save</property>
+            <signal name="clicked" handler="on_menu_apply_activate" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkModelButton" id="menu_remove_user_rule">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="text" translatable="yes">Remove _User Rule</property>
+            <signal name="clicked" handler="on_menu_remove_user_rule_activate" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkSeparator">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">3</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkModelButton" id="menu_shortcuts">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="text" translatable="yes">_Keyboard Shortcuts</property>
+            <signal name="clicked" handler="on_menu_shortcuts_activate" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">4</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkModelButton" id="menu_help">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="text" translatable="yes">_Help</property>
+            <signal name="clicked" handler="on_menu_help_activate" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">5</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkModelButton" id="menu_quit">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="text" translatable="yes">_Quit</property>
+            <signal name="clicked" handler="on_menu_quit_activate" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">6</property>
+          </packing>
+        </child>
       </object>
     </child>
   </object>
-  <object class="GtkWindow" id="window_main">
-    <property name="name">wdn_window_main_new</property>
+  <object class="GtkApplicationWindow" id="window_main">
     <property name="can-focus">False</property>
+    <accel-groups>
+      <group name="accelgroup"/>
+    </accel-groups>
     <signal name="destroy" handler="on_window_main_destroy" swapped="no"/>
     <child>
       <object class="GtkBox">
@@ -1447,11 +1499,12 @@
         <property name="title" translatable="yes">Gooroom Platform Management</property>
         <property name="show-close-button">True</property>
         <child>
-          <object class="GtkMenuButton">
+          <object class="GtkMenuButton" id="menu_btn">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
-            <property name="popup">menu</property>
+            <property name="use-popover">False</property>
+            <property name="popover">popover</property>
             <child>
               <object class="GtkImage">
                 <property name="visible">True</property>
@@ -1463,10 +1516,5 @@
         </child>
       </object>
     </child>
-  </object>
-  <object class="GtkAdjustment" id="adjustment1">
-    <property name="upper">100</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">10</property>
   </object>
 </interface>
